--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,25 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  scroll-behavior: smooth !important;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f1f5f8;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
-* {
-  box-sizing: border-box;
+body::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body::-webkit-scrollbar-thumb {
+  background-color: #2563eb;
+  border-radius: 1px;
 }
