--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,16 +10,16 @@ body {
   background-color: #f1f5f8;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 5px;
   background-color: transparent;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #2563eb;
   border-radius: 1px;
 }
